# servit

./: LICENSE  README.rst  pyproject.toml
servit/: __init__.py  object_store.py  servit.py
tests/: data.py  test_method_serving.py  test_object_store.py  test_servit.py
