[tool.poetry]
name = "servit"
version = "0.1.0"
description = "Quickly serve pydantic models as a service"
authors = ["Yair Frid <fridyair@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73"


[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
