[tool.poetry]
name = "servit"
version = "0.1.0"
description = "Quickly serve pydantic models as a service"
authors = ["Yair Frid <fridyair@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
requests = "^2.27.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

